重新規劃返回頂端元件

--- a/sass/all.scss
+++ b/sass/all.scss
@@ -17,6 +17,7 @@
 // @import "component/grid"; // guideline 專用
 @import "component/page-header";
 @import "component/block";
+@import "component/back-to-top";
 
 // ==== partial ====
 // @import "partial/guideline-header"; // guideline 專用
@@ -35,7 +36,6 @@
 @import "partial/comments";
 @import "partial/aside-posts";
 @import "partial/message-block";
-@import "partial/back-to-top";
 
 
 // ==== page ====
