--- a/posts/single-post-page.html.slim
+++ b/posts/single-post-page.html.slim
@@ -1,17 +1,20 @@
+/ 本頁為「最新消息」類型文章的樣板
+
 = render '/partial/header'
 = render '/partial/sub-menu'
+
 .content.has-sub-menu
-  .post
-    .post-header style="background-image: url('/images/post-header-image.png')"
-      .post-header-inner
-        ul.post-category
-          li: a href="/categories/show.html" 故事
-          // 若出現兩者以上議題的架構
-          / li: a href="/categories/show.html" 活動
-          / li: a href="/categories/show.html" 政策
-        h2.post-title.auto-break-text 開創一個真正屬於人民的時代
-        h3.post-subtitle.auto-break-text 本文為蔡英文於華府智庫「戰略與國際研究中心（CSIS）」之演講
-    .container.container_single-article
+  .post.post_bg-image-style
+    .post-header
+      .post-cover
+        .post-cover-inner style="background-image: url('/images/post-header-image.jpg')"
+          ul.post-category
+            li: a href="/categories/show.html" 故事
+            // 若出現兩者以上議題的架構
+            / li: a href="/categories/show.html" 活動
+            / li: a href="/categories/show.html" 政策
+          h2.post-title.auto-break-text 開創一個真正屬於人民的時代
+          h3.post-subtitle.auto-break-text 本文為蔡英文於華府智庫「戰略與國際研究中心（CSIS）」之演講
       .post-share
         span.post-share-title 分享：
         a.post-share-btn.icon-facebook href="#" target="_blank"
@@ -22,20 +25,21 @@
         span.post-date 2015.7.23
         - (rand(5) + 1).times do |i|
           a.post-tag href="/tags/"= zh_lorem_words(rand(5) + 1)
-      .post-content.article
+    .post-content.article
+      .container.container_single-article
         = render "/partial/demo-article"
-      .post-footer
-        .post-share
-          span.post-share-title 分享：
-          a.post-share-btn.icon-facebook href="#" target="_blank"
-          a.post-share-btn.icon-twitter href="#" target="_blank"
-          a.post-share-btn.icon-plurk href="#" target="_blank"
-          a.post-share-btn.icon-line href="#" target="_blank"
-          / img.post-fb-like src="/images/fb-like.png"
-        / .pager
-        /   a.pager-item.prev href="#": .pager-title 上一篇
-        /   a.pager-item.pager-item_return href="#" 返回文章列表
-        /   a.pager-item.next href="#": .pager-title 下一篇
+    .post-footer
+      .post-share
+        span.post-share-title 分享：
+        a.post-share-btn.icon-facebook href="#" target="_blank"
+        a.post-share-btn.icon-twitter href="#" target="_blank"
+        a.post-share-btn.icon-plurk href="#" target="_blank"
+        a.post-share-btn.icon-line href="#" target="_blank"
+        / img.post-fb-like src="/images/fb-like.png"
+      / .pager
+      /   a.pager-item.prev href="#": .pager-title 上一篇
+      /   a.pager-item.pager-item_return href="#" 返回文章列表
+      /   a.pager-item.next href="#": .pager-title 下一篇
 
   .aside-posts
     .container.container_single-article
