--- a/search-result/index.html.slim
+++ b/search-result/index.html.slim
@@ -21,4 +21,4 @@
               p.post-summary.auto-break-text 民主進步黨主席暨總統參選人蔡英文今(25)日下午至桃園連跑兩場行程，除前往祥儀機器人夢工廠及桃園市婦女館參訪，傍晚則是出席在地希望生活節，與民...
 
       .pageaction
-        a.btn.btn_primary href="#" 載入更多文章
+        = render '/partial/pagination'
