--- a/sass/all.scss
+++ b/sass/all.scss
@@ -35,11 +35,13 @@
 @import "partial/comments";
 @import "partial/aside-posts";
 @import "partial/message-block";
+@import "partial/scroll-spy";
 @import "partial/back-to-top";
 
 
 // ==== page ====
 @import "page/homepage";
+@import "page/policy-page";
 @import "page/article-page";
 
 // ==== inbox ====
