--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -802,6 +802,15 @@ body { background-color: #183840; position: relative; }
 @media (min-width: 1025px) { .message-block { padding: 15% 0 144px; }
   .message-block .message-action { margin-top: 48px; } }
 
+.scroll-spy-menu { float: right; display: none; }
+.scroll-spy-menu .scroll-spy-menu-inner { position: fixed; top: 50%; z-index: 100; padding-right: 6px; list-style: none; -webkit-transform: translate(-100%, -50%); -moz-transform: translate(-100%, -50%); -ms-transform: translate(-100%, -50%); -o-transform: translate(-100%, -50%); transform: translate(-100%, -50%); }
+.scroll-spy-menu .scroll-spy-menu-item { position: relative; padding-right: 20px; text-align: right; }
+.scroll-spy-menu .scroll-spy-menu-item a { font-size: 13px; color: transparent; white-space: nowrap; -webkit-transition: color 0.25s; -moz-transition: color 0.25s; -o-transition: color 0.25s; transition: color 0.25s; }
+.scroll-spy-menu .scroll-spy-menu-item:after { content: ""; position: absolute; top: 50%; right: 6px; margin-top: -3px; border: 3px solid #aaaaaa; -webkit-border-radius: 50%; -moz-border-radius: 50%; -ms-border-radius: 50%; -o-border-radius: 50%; border-radius: 50%; -webkit-transition: border-color 0.25s, -webkit-transform 0.25s; -moz-transition: border-color 0.25s, -moz-transform 0.25s; -o-transition: border-color 0.25s, -o-transform 0.25s; transition: border-color 0.25s, transform 0.25s; }
+.scroll-spy-menu .scroll-spy-menu-item.is-active a, .scroll-spy-menu .scroll-spy-menu-item:hover a { color: #50B584; text-decoration: none; }
+.scroll-spy-menu .scroll-spy-menu-item.is-active:after, .scroll-spy-menu .scroll-spy-menu-item:hover:after { border-color: #50B584; -webkit-transform: scale(1.5, 1.5); -moz-transform: scale(1.5, 1.5); -ms-transform: scale(1.5, 1.5); -o-transform: scale(1.5, 1.5); transform: scale(1.5, 1.5); }
+@media (min-width: 1025px) { .scroll-spy-menu { display: block; } }
+
 .back-to-top-wrap { visibility: hidden; display: block; position: fixed; bottom: -48px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; max-width: 1512px; width: 100%; margin: 0 auto; opacity: 0; -webkit-transition: visibility 0s, opacity 0.5s, bottom 0.5s; -webkit-transition-delay: 0.5s, 0s, 0s; -moz-transition: visibility 0s 0.5s, opacity 0.5s, bottom 0.5s; -o-transition: visibility 0s 0.5s, opacity 0.5s, bottom 0.5s; transition: visibility 0s 0.5s, opacity 0.5s, bottom 0.5s; }
 .back-to-top-wrap.is-active { visibility: visible; opacity: 1; bottom: 24px; -webkit-transition: opacity 0.5s, bottom 0.5s, width 0.2s; -moz-transition: opacity 0.5s, bottom 0.5s, width 0.2s; -o-transition: opacity 0.5s, bottom 0.5s, width 0.2s; transition: opacity 0.5s, bottom 0.5s, width 0.2s; }
 .back-to-top-wrap .back-to-top { display: block; width: 48px; height: 48px; margin: 0 0 0 auto; line-height: 48px; text-align: center; color: white; background-color: rgba(85, 179, 108, 0.8); -webkit-border-radius: 3px 0 0 3px; -moz-border-radius: 3px 0 0 3px; -ms-border-radius: 3px 0 0 3px; -o-border-radius: 3px 0 0 3px; border-radius: 3px 0 0 3px; -webkit-transition: background-color 0.5s, opacity 1s; -webkit-transition-delay: 0s, 0.5s; -moz-transition: background-color 0.5s, opacity 1s 0.5s; -o-transition: background-color 0.5s, opacity 1s 0.5s; transition: background-color 0.5s, opacity 1s 0.5s; }
@@ -821,6 +830,146 @@ body { background-color: #183840; position: relative; }
   .homepage .sub-menu.sticky { margin-top: 61px; } }
 @media (min-width: 1512px) { .homepage .header-inner, .homepage .sub-menu-inner { width: 100%; }
   .homepage .sticky { width: 90%; -webkit-transition: width 0s, opacity 0.75s; -webkit-transition-delay: 0s, 0.5s; -moz-transition: width 0s, opacity 0.75s 0.5s; -o-transition: width 0s, opacity 0.75s 0.5s; transition: width 0s, opacity 0.75s 0.5s; } }
+
+.bold-text { font-weight: bold; }
+
+.italic-text { font-style: italic; }
+
+.highlight-text { background-color: #fbd26b; }
+
+.text-center { text-align: center; }
+
+.policy-page p { margin-bottom: 12px; font-size: 13px; line-height: 24px; text-align: left; }
+.policy-page ul, .policy-page ol { padding-left: 0; }
+.policy-page .section { margin-top: 72px; margin-bottom: 72px; }
+@media (min-width: 640px) { .policy-page .section { margin-top: 144px; margin-bottom: 144px; } }
+@media (min-width: 1025px) { .policy-page .section { margin-top: 216px; margin-bottom: 216px; } }
+.policy-page .policy-header { position: relative; padding-bottom: 1px; text-align: center; color: white; background-repeat: no-repeat; background-position: center center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
+.policy-page .policy-header:before { content: ""; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background-color: rgba(0, 0, 0, 0.5); }
+.policy-page .policy-header .header-title { position: relative; padding: 120px 24px; }
+.policy-page .policy-header .header-title .main-title, .policy-page .policy-header .header-title .main-sub-title { font-weight: bold; }
+.policy-page .main-title { margin-bottom: 6px; font-size: 28px; line-height: 48px; }
+.policy-page .main-sub-title { margin-bottom: 0px; font-size: 16px; line-height: 24px; }
+.policy-page .section-title { margin-bottom: 12px; font-size: 24px; line-height: 32px; font-weight: bold; }
+.policy-page .sub-section-title { margin-bottom: 6px; font-size: 18px; line-height: 30px; font-weight: bold; }
+.policy-page .blockquote { max-width: 680px; margin-left: auto; margin-right: auto; padding-left: 12px; padding-right: 12px; font-size: 16px; line-height: 24px; text-align: center; color: #3ca59a; }
+@media (min-width: 640px) { .policy-page .blockquote { padding-left: 24px; padding-right: 24px; } }
+@media (min-width: 1025px) { .policy-page .blockquote { padding-left: 48px; padding-right: 48px; } }
+.policy-page .center-content { text-align: left; }
+.policy-page .center-content .text-content { max-width: 680px; margin-left: auto; margin-right: auto; padding-left: 12px; padding-right: 12px; }
+@media (min-width: 640px) { .policy-page .center-content .text-content { padding-left: 24px; padding-right: 24px; } }
+@media (min-width: 1025px) { .policy-page .center-content .text-content { padding-left: 48px; padding-right: 48px; } }
+.policy-page .center-content .figure { max-width: 960px; margin-left: auto; margin-right: auto; padding-left: 12px; padding-right: 12px; margin-top: 24px; margin-bottom: 24px; }
+@media (min-width: 640px) { .policy-page .center-content .figure { padding-left: 24px; padding-right: 24px; } }
+@media (min-width: 1025px) { .policy-page .center-content .figure { padding-left: 48px; padding-right: 48px; } }
+.policy-page .group-content { position: relative; background-color: #f0f0f0; }
+.policy-page .group-content:after { content: ""; display: table; clear: both; }
+.policy-page .group-content .text-content { padding: 48px 12px 0px; }
+.policy-page .group-content .figure { padding-top: 66.666%; background-repeat: no-repeat; background-position: center center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
+.policy-page .multi-col-content { max-width: 960px; margin-left: auto; margin-right: auto; padding-left: 12px; padding-right: 12px; text-align: left; }
+@media (min-width: 640px) { .policy-page .multi-col-content { padding-left: 24px; padding-right: 24px; } }
+@media (min-width: 1025px) { .policy-page .multi-col-content { padding-left: 48px; padding-right: 48px; } }
+.policy-page .multi-col-content-inner:after { content: ""; display: table; clear: both; }
+.policy-page .col-2-content { padding: 0px; text-align: left; }
+.policy-page .col-3-content { padding: 0px; text-align: left; }
+.policy-page .section-title + .multi-col-content-inner { margin-top: 48px; }
+.policy-page .section-has-background { color: white; background-repeat: no-repeat; background-position: center center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
+.policy-page .figure-grid:after { content: ""; display: table; clear: both; }
+.policy-page .figure-grid .figure-item-wrap { float: left; width: 50%; }
+.policy-page .figure-grid .figure-item-wrap:after { content: ""; display: table; clear: both; }
+.policy-page .figure-grid.edit .figure-item { outline: 1px solid red; }
+.policy-page .figure-grid .figure-item { float: left; width: 100%; padding-top: 100%; background-repeat: no-repeat; background-position: center center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; background-color: #dddddd; }
+.policy-page .figure-grid .figure-item.small { width: 50%; padding-top: 50%; }
+.policy-page .figure-grid .figure-item.empty { display: none; background-color: transparent; }
+.policy-page .order-list { position: relative; padding: 24px 24px 0; list-style: none; }
+.policy-page .order-list .section-title, .policy-page .order-list .sub-section-title { line-height: 48px; margin-bottom: 0px; }
+.policy-page .order-list:before { position: absolute; top: 24px; left: -18px; width: 36px; text-align: right; font-size: 28px; font-weight: bold; line-height: 48px; letter-spacing: -3px; color: rgba(0, 0, 0, 0.2); }
+.policy-page .order-list:nth-child(1):before { content: "1"; }
+.policy-page .order-list:nth-child(2):before { content: "2"; }
+.policy-page .order-list:nth-child(3):before { content: "3"; }
+.policy-page .order-list:nth-child(4):before { content: "4"; }
+.policy-page .order-list:nth-child(5):before { content: "5"; }
+.policy-page .order-list:nth-child(6):before { content: "6"; }
+.policy-page .order-list:nth-child(7):before { content: "7"; }
+.policy-page .order-list:nth-child(8):before { content: "8"; }
+.policy-page .order-list:nth-child(9):before { content: "9"; }
+.policy-page .order-list:nth-child(10):before { content: "10"; }
+.policy-page .order-list:nth-child(11):before { content: "11"; }
+.policy-page .order-list:nth-child(12):before { content: "12"; }
+.policy-page .order-list:nth-child(13):before { content: "13"; }
+.policy-page .order-list:nth-child(14):before { content: "14"; }
+.policy-page .order-list:nth-child(15):before { content: "15"; }
+.policy-page .order-list:nth-child(16):before { content: "16"; }
+.policy-page .order-list:nth-child(17):before { content: "17"; }
+.policy-page .order-list:nth-child(18):before { content: "18"; }
+.policy-page .order-list:nth-child(19):before { content: "19"; }
+.policy-page .order-list:nth-child(20):before { content: "20"; }
+.policy-page .order-list:nth-child(21):before { content: "21"; }
+.policy-page .order-list:nth-child(22):before { content: "22"; }
+.policy-page .order-list:nth-child(23):before { content: "23"; }
+.policy-page .order-list:nth-child(24):before { content: "24"; }
+.policy-page .order-list:nth-child(25):before { content: "25"; }
+.policy-page .order-list:nth-child(26):before { content: "26"; }
+.policy-page .order-list:nth-child(27):before { content: "27"; }
+.policy-page .order-list:nth-child(28):before { content: "28"; }
+.policy-page .order-list:nth-child(29):before { content: "29"; }
+.policy-page .order-list:nth-child(30):before { content: "30"; }
+.policy-page .animation { position: relative; }
+.policy-page .fade-in { opacity: 0; -webkit-transition: opacity 0.75s ease-in-out; -moz-transition: opacity 0.75s ease-in-out; -o-transition: opacity 0.75s ease-in-out; transition: opacity 0.75s ease-in-out; }
+.policy-page .fade-in.is-active { opacity: 1; }
+.policy-page .slide-up { opacity: 0; -webkit-transform: translateY(10%); -moz-transform: translateY(10%); -ms-transform: translateY(10%); -o-transform: translateY(10%); transform: translateY(10%); -webkit-transition: -webkit-transform 0.75s ease-in-out, opacity 0.75s ease-in-out; -moz-transition: -moz-transform 0.75s ease-in-out, opacity 0.75s ease-in-out; -o-transition: -o-transform 0.75s ease-in-out, opacity 0.75s ease-in-out; transition: transform 0.75s ease-in-out, opacity 0.75s ease-in-out; }
+.policy-page .slide-up.is-active { opacity: 1; -webkit-transform: translateY(0%); -moz-transform: translateY(0%); -ms-transform: translateY(0%); -o-transform: translateY(0%); transform: translateY(0%); }
+.policy-page .slide-left { opacity: 0; -webkit-transform: translateX(10%); -moz-transform: translateX(10%); -ms-transform: translateX(10%); -o-transform: translateX(10%); transform: translateX(10%); -webkit-transition: -webkit-transform 0.75s ease-in-out, opacity 0.75s ease-in-out; -moz-transition: -moz-transform 0.75s ease-in-out, opacity 0.75s ease-in-out; -o-transition: -o-transform 0.75s ease-in-out, opacity 0.75s ease-in-out; transition: transform 0.75s ease-in-out, opacity 0.75s ease-in-out; }
+.policy-page .slide-left.is-active { opacity: 1; -webkit-transform: translateX(0%); -moz-transform: translateX(0%); -ms-transform: translateX(0%); -o-transform: translateX(0%); transform: translateX(0%); }
+.policy-page .slide-right { opacity: 0; -webkit-transform: translateX(-10%); -moz-transform: translateX(-10%); -ms-transform: translateX(-10%); -o-transform: translateX(-10%); transform: translateX(-10%); -webkit-transition: -webkit-transform 0.75s ease-in-out, opacity 0.75s ease-in-out; -moz-transition: -moz-transform 0.75s ease-in-out, opacity 0.75s ease-in-out; -o-transition: -o-transform 0.75s ease-in-out, opacity 0.75s ease-in-out; transition: transform 0.75s ease-in-out, opacity 0.75s ease-in-out; }
+.policy-page .slide-right.is-active { opacity: 1; -webkit-transform: translateX(0%); -moz-transform: translateX(0%); -ms-transform: translateX(0%); -o-transform: translateX(0%); transform: translateX(0%); }
+.policy-page .delay-100ms { -webkit-transition-delay: 0.1s; -moz-transition-delay: 0.1s; -o-transition-delay: 0.1s; transition-delay: 0.1s; }
+.policy-page .delay-200ms { -webkit-transition-delay: 0.2s; -moz-transition-delay: 0.2s; -o-transition-delay: 0.2s; transition-delay: 0.2s; }
+.policy-page .delay-300ms { -webkit-transition-delay: 0.3s; -moz-transition-delay: 0.3s; -o-transition-delay: 0.3s; transition-delay: 0.3s; }
+.policy-page .delay-400ms { -webkit-transition-delay: 0.4s; -moz-transition-delay: 0.4s; -o-transition-delay: 0.4s; transition-delay: 0.4s; }
+.policy-page .delay-500ms { -webkit-transition-delay: 0.5s; -moz-transition-delay: 0.5s; -o-transition-delay: 0.5s; transition-delay: 0.5s; }
+.policy-page .delay-600ms { -webkit-transition-delay: 0.6s; -moz-transition-delay: 0.6s; -o-transition-delay: 0.6s; transition-delay: 0.6s; }
+.policy-page .delay-700ms { -webkit-transition-delay: 0.7s; -moz-transition-delay: 0.7s; -o-transition-delay: 0.7s; transition-delay: 0.7s; }
+.policy-page .delay-800ms { -webkit-transition-delay: 0.8s; -moz-transition-delay: 0.8s; -o-transition-delay: 0.8s; transition-delay: 0.8s; }
+.policy-page .delay-900ms { -webkit-transition-delay: 0.9s; -moz-transition-delay: 0.9s; -o-transition-delay: 0.9s; transition-delay: 0.9s; }
+@media (min-width: 640px) { .policy-page p { font-size: 15px; line-height: 24px; }
+  .policy-page .policy-header .header-title { padding: 192px 36px; }
+  .policy-page .main-title { margin-bottom: 12px; font-size: 36px; line-height: 48px; }
+  .policy-page .main-sub-title { font-size: 18px; line-height: 24px; }
+  .policy-page .section-title { margin-bottom: 24px; font-size: 26px; line-height: 36px; }
+  .policy-page .sub-section-title { margin-bottom: 12px; font-size: 21px; line-height: 30px; }
+  .policy-page .center-content { text-align: center; }
+  .policy-page .center-content .figure { margin-top: 48px; margin-bottom: 48px; }
+  .policy-page .group-content .text-content { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; width: 50%; min-height: 460px; padding: 36px; }
+  .policy-page .group-content .text-content.left { float: left; }
+  .policy-page .group-content .text-content.right { float: right; }
+  .policy-page .group-content .figure { position: absolute; width: 50%; top: 0; bottom: 0; padding-top: 0; }
+  .policy-page .group-content .text-content.left + .figure { right: 0; }
+  .policy-page .group-content .text-content.right + .figure { left: 0; }
+  .policy-page .multi-col-content { max-width: 960px; margin-left: auto; margin-right: auto; padding-left: 12px; padding-right: 12px; text-align: center; }
+  .policy-page .multi-col-content-inner:after { content: ""; display: table; clear: both; }
+  .policy-page .col-2-content { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; float: left; width: 50%; padding: 24px 24px 0; text-align: left; }
+  .policy-page .col-2-content:nth-child(2n+1) { clear: left; }
+  .policy-page .col-3-content { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; float: left; width: 33.333%; padding: 24px 24px 0; text-align: left; }
+  .policy-page .col-3-content:nth-child(3n+1) { clear: left; }
+  .policy-page .section-title + .multi-col-content-inner { margin-top: 48px; }
+  .policy-page .order-list:before { left: -21px; font-size: 32px; }
+  .policy-page .figure-grid .figure-item-row:after { content: ""; display: table; clear: both; }
+  .policy-page .figure-grid .figure-item-wrap { width: 25%; }
+  .policy-page .figure-grid .figure-item.empty { display: block; } }
+@media (min-width: 640px) and (min-width: 640px) { .policy-page .multi-col-content { padding-left: 24px; padding-right: 24px; } }
+@media (min-width: 640px) and (min-width: 1025px) { .policy-page .multi-col-content { padding-left: 48px; padding-right: 48px; } }
+@media (min-width: 1025px) { .policy-page p { margin-bottom: 24px; }
+  .policy-page .main-title { margin-bottom: 24px; font-size: 42px; line-height: 48px; }
+  .policy-page .main-sub-title { font-size: 18px; line-height: 24px; }
+  .policy-page .section-title { margin-bottom: 24px; font-size: 28px; line-height: 42px; }
+  .policy-page .sub-section-title { font-size: 21px; line-height: 30px; }
+  .policy-page .policy-header { background-attachment: fixed; }
+  .policy-page .policy-header .header-title { height: 80vh; max-height: 920px; padding: 0 24px; }
+  .policy-page .policy-header .header-title .header-title-inner { position: absolute; top: 50%; width: 100%; -webkit-transform: translateY(-50%); -moz-transform: translateY(-50%); -ms-transform: translateY(-50%); -o-transform: translateY(-50%); transform: translateY(-50%); }
+  .policy-page .policy-header .blockquote { padding-top: 216px; padding-bottom: 216px; }
+  .policy-page .group-content .text-content { padding: 72px; }
+  .policy-page .order-list:before { left: -24px; font-size: 36px; } }
 
 .article-page .page-header { margin-bottom: 24px; }
 @media (min-width: 640px) { .article-page .page-header { margin-bottom: 48px; } }
