--- a/policy/index.html.slim
+++ b/policy/index.html.slim
@@ -13,7 +13,7 @@
         li.scroll-spy-menu-item: a href="#section-2" 解決方案
         li.scroll-spy-menu-item: a href="#section-3" 成果
     .section.scroll-spy-section#section-1 data-spy-count="1"
-      p.blockquote.animation.fade-in 有過照顧經驗人都知道，如果沒有很大的耐心和愛心，即使是最親近的家人，也會感到辛苦。在照顧過程中，不管是照顧者還是被照顧者，常常會處於一種精神上很緊張的狀態......有一段時間我沒有工作，在家裡照顧媽媽，特別感受到這個問題的嚴重性，這是台灣許多家庭正在經歷的事情。作為一個政治人物，我的責任就是提出問題的解決方案。
+      blockquote.animation.fade-in 有過照顧經驗人都知道，如果沒有很大的耐心和愛心，即使是最親近的家人，也會感到辛苦。在照顧過程中，不管是照顧者還是被照顧者，常常會處於一種精神上很緊張的狀態......有一段時間我沒有工作，在家裡照顧媽媽，特別感受到這個問題的嚴重性，這是台灣許多家庭正在經歷的事情。作為一個政治人物，我的責任就是提出問題的解決方案。
 
     .section
       .center-content
