--- a/posts/card.html.slim
+++ b/posts/card.html.slim
@@ -6,34 +6,35 @@
 .content.has-sub-menu
   .post
     .post-header
-      / 文章封面
-      .post-cover
-        img src="/images/wordcard.jpg"
-      / 文章所屬議題
-      ul.post-category
-        li: a href="/categories/show.html" 字卡
-        / 若出現兩者以上議題的架構
-        / li: a href="/categories/show.html" 活動
-        / li: a href="/categories/show.html" 政策
-      / 文章標題
-      h2.post-title.auto-break-text 開創一個真正屬於人民的時代
-      / 文章副標題（可有可無，若沒有副標題，請移除整個架構）
-      h3.post-subtitle.auto-break-text 本文為蔡英文於華府智庫「戰略與國際研究中心（CSIS）」之演講
-      / 文章分享按鈕區塊
-      .post-share
-        span.post-share-title 分享：
-        a.post-share-btn.icon-facebook href="#" target="_blank"
-        a.post-share-btn.icon-twitter href="#" target="_blank"
-        a.post-share-btn.icon-plurk href="#" target="_blank"
-        a.post-share-btn.icon-line href="#" target="_blank"
-      / 文章日期、標籤
-      .post-meta
-        span.post-date 2015.7.23
-        - (rand(5) + 1).times do |i|
-          a.post-tag href="/tags/"= zh_lorem_words(rand(5) + 1)
-    / 文章內容區塊
+      .container.container_single-article
+        / 文章封面
+        .post-cover
+          img src="/images/wordcard.jpg"
+        / 文章所屬議題
+        ul.post-category
+          li: a href="/categories/show.html" 字卡
+          / 若出現兩者以上議題的架構
+          / li: a href="/categories/show.html" 活動
+          / li: a href="/categories/show.html" 政策
+        / 文章標題
+        h2.post-title.auto-break-text 開創一個真正屬於人民的時代
+        / 文章副標題（可有可無，若沒有副標題，請移除整個架構）
+        h3.post-subtitle.auto-break-text 本文為蔡英文於華府智庫「戰略與國際研究中心（CSIS）」之演講
+        / 文章分享按鈕區塊
+        .post-share
+          span.post-share-title 分享：
+          a.post-share-btn.icon-facebook href="#" target="_blank"
+          a.post-share-btn.icon-twitter href="#" target="_blank"
+          a.post-share-btn.icon-plurk href="#" target="_blank"
+          a.post-share-btn.icon-line href="#" target="_blank"
+        / 文章日期、標籤
+        .post-meta
+          span.post-date 2015.7.23
+          - (rand(5) + 1).times do |i|
+            a.post-tag href="/tags/"= zh_lorem_words(rand(5) + 1)
     .post-content.article
       .container.container_single-article
+        / 文章內容區塊
         = render "/partial/demo-article"
     .post-footer
       .container.container_single-article
