--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -728,7 +728,7 @@ body { background-color: #183840; position: relative; }
 
 .post:after { content: ""; display: table; clear: both; }
 .post .post-header { text-align: center; margin-bottom: 24px; }
-.post .post-cover { display: block; margin-bottom: 12px; }
+.post .post-cover { display: block; margin: 0 -24px 12px; }
 .post .post-cover img { margin: 0 auto; display: block; }
 .post .post-category { margin: 0; padding: 0; border: 0; list-style: none; }
 .post .post-category li { display: inline-block; margin: 0 3px; }
@@ -761,7 +761,7 @@ body { background-color: #183840; position: relative; }
 .post .post-share-btn:hover { color: #444; text-decoration: none; }
 .post .post-fb-like { display: block; margin: 0 auto; margin-top: 12px; }
 @media (min-width: 640px) { .post .post-header { padding-top: 48px; margin-bottom: 48px; }
-  .post .post-cover { margin: 0 auto 24px; padding: 0 48px; }
+  .post .post-cover { margin: 0 auto 24px; }
   .post .post-category a { display: block; font-size: 18px; line-height: 24px; }
   .post .post-title { margin: 6px 0 0; font-size: 32px; line-height: 36px; }
   .post .post-subtitle { margin-top: 12px; font-size: 18px; line-height: 24px; }
