--- a/partial/_header.html.slim
+++ b/partial/_header.html.slim
@@ -11,7 +11,7 @@
           = nav_link_to "參選宣言", "#"
           = nav_link_to "小英的人生旅途", "#"
           / = nav_link_to "願景", "#"
-          = nav_link_to "加入志工", "#"
+          = nav_link_to "加入志工", "/volunteers/new/"
           = nav_link_to "捐款", "#"
 
         .menu-bottom
