志工頁面細節修改

--- a/sass/all.scss
+++ b/sass/all.scss
@@ -44,3 +44,9 @@
 @import "page/volunteers-page";
 
 // ==== inbox ====
+.hide-phone {
+  display: none;
+  @include at-breakpoint($pad) {
+    display: block;
+  }
+}
