--- a/volunteers/new/index.html.slim
+++ b/volunteers/new/index.html.slim
@@ -1,9 +1,9 @@
 = render '/partial/header'
 .content.volunteer
-  .container
+  .container.container_single-article
     .volunteer-header
       h1.title 志工募集
-      p.description 我們一起點亮台灣！ 蔡英文競選辦公室正在徵詢有意願擔任志工者。 參與改變、成為我們的夥伴，請寫下面的表單， 我們會在彙整資訊後與您聯絡。
+      p.description.auto-break-text 我們一起點亮台灣！ 蔡英文競選辦公室正在徵詢有意願擔任志工者。 參與改變、成為我們的夥伴，請寫下面的表單， 我們會在彙整資訊後與您聯絡。
       .volunteer-image
 
     .volunteer-form
