--- a/volunteers/thanks/index.html.slim
+++ b/volunteers/thanks/index.html.slim
@@ -3,5 +3,5 @@
   .container
     .volunteer-header
       h1.title 感謝填寫
-      p.description 謝謝你的填寫，我們已經收到資料了，我們會再和你聯絡。<br>期待你的加入，能幫助我們贏得台灣的未來！
+      p.description 謝謝你的填寫，我們已經收到資料了，我們會再和你聯絡。<br class="hide-phone">期待你的加入，能幫助我們贏得台灣的未來！
       .volunteer-image
