刪除加入志工多餘的欄位，並調整樣式

--- a/sass/all.scss
+++ b/sass/all.scss
@@ -36,12 +36,11 @@
 @import "partial/comments";
 @import "partial/aside-posts";
 @import "partial/message-block";
-
+@import "partial/volunteer";
 
 // ==== page ====
 @import "page/homepage";
 @import "page/article-page";
-@import "page/volunteers-page";
 
 // ==== inbox ====
 .hide-phone {
