--- a/volunteers/thanks/index.html.slim
+++ b/volunteers/thanks/index.html.slim
@@ -1,7 +1,8 @@
 = render '/partial/header'
-.content.volunteer.thanks
+.content
   .container
-    .volunteer-header
-      h1.title 感謝填寫
-      p.description 謝謝你的填寫，我們已經收到資料了，我們會再和你聯絡。<br class="hide-phone">期待你的加入，能幫助我們贏得台灣的未來！
-      .volunteer-image
+    .volunteer.volunteer_thanks
+      .volunteer-header
+        h1.volunteer-title 你的資料已成功送出
+        p.volunteer-text 謝謝你的填寫，我們已經收到資料了，我們會再和你聯絡。<br class="hide-phone">期待你的加入，能幫助我們贏得台灣的未來！
+        .volunteer-thanks-image
