--- a/volunteers/new/index.html.slim
+++ b/volunteers/new/index.html.slim
@@ -25,7 +25,7 @@
               .form-content
                 input.form-control.large type="tel"
             .form-row.is_required
-              label.form-label MAIL
+              label.form-label Email
               .form-content
                 input.form-control.large type="email"
         .volunteer-action
