--- a/volunteers/thanks/index.html.slim
+++ b/volunteers/thanks/index.html.slim
@@ -3,6 +3,6 @@
   .container
     .volunteer.volunteer_thanks
       .volunteer-header
-        h1.volunteer-title 你的資料已成功送出
-        p.volunteer-text 謝謝你的填寫，我們已經收到資料了，我們會再和你聯絡。<br class="hide-phone">期待你的加入，能幫助我們贏得台灣的未來！
+        h1.volunteer-title 感謝您的填寫
+        p.volunteer-text 謝謝您的填寫，我們彙整資訊後，將由各地志工團與您聯絡。<br class="hide-phone">期待您的加入，能幫助我們贏得台灣的未來！
         .volunteer-thanks-image
