--- a/volunteers/new/index.html.slim
+++ b/volunteers/new/index.html.slim
@@ -4,30 +4,65 @@
     .volunteer
       .volunteer-header
         h1.volunteer-title 志工募集
-        p.volunteer-text.auto-break-text 我們一起點亮台灣！ 蔡英文競選辦公室正在徵詢有意願擔任志工者。 參與改變、成為我們的夥伴，請寫下面的表單， 我們會在彙整資訊後與您聯絡。
+        p.volunteer-text.auto-break-text 我們一起點亮台灣！ 蔡英文競選辦公室正在徵詢有意願擔任志工者。參與改變、成為我們的夥伴，請寫下面的表單。
         .volunteer-image
 
       form.form.volunteer-form
-        h2.volunteer-form-title 報名表
+        h2.volunteer-form-title 填寫您的資訊
         .volunteer-form-content
           .col
-            .form-row.is_required
+            .form-row
               label.form-label 姓名
               .form-content
                 input.form-control.large type="text"
-            .form-row.is_required
+            .form-row
               label.form-label 所在縣市
               .form-content
-                input.form-control.large type="text"
+                select.form-control.form-select.large
+                  option value=""  縣市
+                  option value="基隆市"  基隆市
+                  option value="台北市"  台北市
+                  option value="新北市"  新北市
+                  option value="宜蘭縣"  宜蘭縣
+                  option value="新竹市"  新竹市
+                  option value="新竹縣"  新竹縣
+                  option value="桃園市"  桃園市
+                  option value="苗栗縣"  苗栗縣
+                  option value="台中市"  台中市
+                  option value="彰化縣"  彰化縣
+                  option value="南投縣"  南投縣
+                  option value="嘉義市"  嘉義市
+                  option value="嘉義縣"  嘉義縣
+                  option value="雲林縣"  雲林縣
+                  option value="台南市"  台南市
+                  option value="高雄市"  高雄市
+                  option value="屏東縣"  屏東縣
+                  option value="台東縣"  台東縣
+                  option value="花蓮縣"  花蓮縣
+                  option value="金門縣"  金門縣
+                  option value="連江縣"  連江縣
+                  option value="澎湖縣"  澎湖縣
+                  option value="南海諸島"  南海諸島
+
           .col
-            .form-row.is_required
+            .form-row
               label.form-label 聯絡電話（市話 or 手機）
               .form-content
                 input.form-control.large type="tel"
-            .form-row.is_required
+            / 若欄位沒填寫或格式錯誤，使用註解的架構與樣式
+            / .form-row.error
+            /   label.form-label
+            /     |聯絡電話（市話或手機）
+            /     span.form-label-tip 尚未填寫
+            /   .form-content
+            /     input.form-control.large type="tel"
+            .form-row
               label.form-label Email
               .form-content
                 input.form-control.large type="email"
+        p.volunteer-tip.auto-break-text 關於填寫資料、加入志工等事宜有疑問，也可聯絡：(02)2392-9989 轉 239、240，我們將有專人為您服務。
         .volunteer-action
-          input.btn.btn_primary type="submit" value="確認送出"
+          / input.btn.btn_primary type="submit" value="確認送出"
+          / 以下為前端 demo 按鈕，套版請用 input
+          a.btn.btn_primary href="/volunteers/thanks/" 確認送出
 
