--- a/sass/all.scss
+++ b/sass/all.scss
@@ -35,6 +35,7 @@
 @import "partial/comments";
 @import "partial/aside-posts";
 @import "partial/message-block";
+@import "partial/animation";
 @import "partial/scroll-spy";
 @import "partial/back-to-top";
 
