--- a/volunteers/new/index.html.slim
+++ b/volunteers/new/index.html.slim
@@ -18,7 +18,7 @@
             .form-row
               label.form-label 所在縣市
               .form-content
-                select.form-control.form-select.large
+                select.form-select.large
                   option value=""  縣市
                   option value="基隆市"  基隆市
                   option value="台北市"  台北市
